[package]
name = "oxiplume"
version = "0.1.0"
edition = "2021"
description = "OxiPlume is a small rust api wrapper for the api Plume API for Sodium Labs. It is a simple wrapper that allows you to interact with the Plume API in a more rust-like way."
repository = "https://github.com/lotus64yt/oxiplume"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }